--- a/css/leon.css
+++ b/css/leon.css
@@ -7,6 +7,13 @@
   --main-duration: 0.5s;
 }
 /* End Variables */
+/* Start Framework */
+.grid-framwork {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 20px;
+}
+/* End Framework */
 /* Start Global Rules */
 * {
     -webkit-box-sizing: border-box;
@@ -179,9 +186,9 @@
     background-color: var(--section-background);
   }
   .features .container {
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 20px;
+    grid-gap: 20px; */
   }
   .features .feat {
     padding: 20px;
@@ -206,9 +213,9 @@
     padding-bottom: var(--section-padding);
   }
   .services .services-content {
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 30px;
+    grid-gap: 20px; */
     margin-top: 100px;
   }
   .services .services-content .srv {
@@ -266,9 +273,9 @@
     background-color: var(--section-background);
   }
   .portfolio .portfolio-content {
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-gap: 30px;
+    grid-gap: 20px; */
     margin-top: 80px;
   }
   .portfolio .portfolio-content .card {
